    for the recommended alternatives):

      blkproc
      bmpwrite
      dilate
      erode

 ** With the new function `imbothat' the transform option of
    `imtophat' has been deprecated.

 ** The following functions have had been changed for bug fixes and/or
    improved matlab compatibility

      bwarea
      bweuler
      bwfill
      imhist
      conndef
      im2bw
      im2double
      im2uint8
      im2uint16
      isbw
      isgray
      isrgb
      isind
      mat2gray
      rgb2gray

 ** `bwarea' now supports all image classes and considers objects all non
    zero pixels (not all pixels higher than zero).

 ** `rgb2gray' now also supports images of the class single and performs a
    weighted conversion to keep the image luminance instead of a the mean
    through each color.

 ** `im2bw' now supports input images of the int16 class and deals better with
    RGB images since it uses `rgb2gray' internally (see changes to rgb2gray).
    Threshold is performed on all values greater than value instead of greater
    than or equal.

 ** `imhist' is much more compatible with matlab and among other changes,
    it now uses the whole range of the class for the histogram rather than
    the minimum and maximum of the input image and displays a colorbar under
    the histogram.

 ** `isbw' now defines a black-and-white image as a binary non-sparse
    matrix. This is compatible with matlab. To use the old behaviour,
    use the new option for the call "isbw (img, "non-logical").
    For backwards compatibility, if a non-logical matrix of 0 and 1 is
    used as input, `isbw' will still return true but a warning will be
    issued since this will deprecated later.

 ** `isgray' now also returns true for matrices of the int16 class.

 ** `isrgb' now returns false for logical matrix.

 ** `tiff_tag_read' had several bug fixes and can now check IFDs beyond
    the first. It can also accept mutiple tag values and IFDs simultaneously