@@ -81,6 +81,7 @@ Summary of important user-visible changes for image 1.1.0:
       bweuler
       bwfill
       imhist
+      imnoise
       conndef
       im2bw
       im2double
@@ -132,6 +133,9 @@ Summary of important user-visible changes for image 1.1.0:
     the image complement after truncation. Also, when the maximum and minimum
     values are equal, `mat2gray' will truncate all values between 0 and 1. See
     the help text (or source) for a detailed description of cautions.
+
+ ** `imnoise' has been expanded to accept images of differente classes instead
+    of only double and single.
 
  ** The private function `__bwdist` has been renamed `__bwdist__`
 
